--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: phyposts
 email: phyposts@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Math and science blog 
+  Math and physics blog 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
